NIHVIVO-1072:  Doing testing in different browsers and fixing layout issues.

--- a/themes/vivo-basic/css/screen.css
+++ b/themes/vivo-basic/css/screen.css
@@ -15,6 +15,15 @@
 @import url("institution.css");
 @import url("individual.css");
 
+header,
+hgroup,
+section,
+nav,
+article,
+aside,
+footer {
+    display: block;
+}
 body {
   position: relative;
   background: #596673;
